--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,14 @@
   "extends": ["trybe-backend"],
   "rules": {
     "sonarjs/no-duplicate-string": ["error", 5]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["*-category.js"],
+      "rules": { 
+        "max-lines-per-function": "off",
+        "camelcase": "off"
+      }
+    }
+  ]
 }
