--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
   },
   "overrides": [
     {
-      "files": ["*-category.js"],
+      "files": ["*-category.js", "*-blog-post.js"],
       "rules": { 
         "max-lines-per-function": "off",
         "camelcase": "off"
