--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,18 @@
       "rules": { 
         "max-lines-per-function": "off"
       }
+    },
+    {
+      "files": [
+        "*-Users.js",
+        "*-Categories.js",
+        "*-BlogPosts.js",
+        "*-PostsCategories.js"
+      ],
+      "rules": {
+        "camelcase": "off",
+        "max-len": "off"
+      }
     }
   ]
 }
